--- a/preamble.tex
+++ b/preamble.tex
@@ -314,3 +314,11 @@
 % from hood chatham: 
 
 \input{sumfgl}
+
+% from https://tex.stackexchange.com/questions/52076/how-to-make-a-superscript-on-the-upper-left-hand-corner-of-a-letter :
+
+\def\presuper#1#2%
+  {\mathop{}%
+   \mathopen{\vphantom{#2}}^{#1}%
+   \kern-\scriptspace%
+   #2}
