clean up todos from 3.2

--- a/main.tex
+++ b/main.tex
@@ -53,6 +53,7 @@
 \todo[inline]{In several places you abuse the \texttt{align*} environment to put references into a right-hand column.  Is there a less hack-y way to do this?}
 \todo[inline]{Be consistent about hyphens / en-dashes connecting ``$A$/$E$/$H_\infty$'' to ``ring''.}
 \todo[inline]{Use $\EinftyRings$ everywhere appropriate.}
+\todo[inline]{Use ${}^*$ and not ${}^\vee$ everywhere for linear dual.}
 
 
 
