--- a/unknowns.tex
+++ b/unknowns.tex
@@ -72,7 +72,7 @@ Additive degeneration and $kO \ne kU^{hC_2}$.
 
 Hopkins's program for $p$--adic interpolation and Salchian $L$--functions.
 
-Hopkins's analytic Weierstra\ss{} products in the Bockstein spectral sequence: \[v_2^{(n)} = v_2^{p^n} \prod_{j=0}^{n-2} \left(1 - \left( \frac{v_1^{p+1}}{v_2} \right)^{p^{n-1} - p^j} \right) \pmod{v_1^{p^n + p^{n-1}}}.\]  In general, Mike has formulas like these for the $0$--line and for the elements $v_{n+1} h_n$ on the $1$--line.
+Hopkins's analytic Weierstrass products in the Bockstein spectral sequence: \[v_2^{(n)} = v_2^{p^n} \prod_{j=0}^{n-2} \left(1 - \left( \frac{v_1^{p+1}}{v_2} \right)^{p^{n-1} - p^j} \right) \pmod{v_1^{p^n + p^{n-1}}}.\]  In general, Mike has formulas like these for the $0$--line and for the elements $v_{n+1} h_n$ on the $1$--line.
 
 \begin{remark}[Yanovski--Schlank]
 Set $S_{\mathrm{small}}$ to be the category generated under finite colimits (including actions by finite groups, say) by $\pi$--finite spaces.  A \textit{generalized homotopy cardinality function} is a function $\chi\co \CatOf S_{\mathrm{small}} \to \Q$ satisfying
